--- a/.gitignore
+++ b/.gitignore
@@ -422,3 +422,5 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,visualstudiocode,jupyternotebooks
+
+tmp
