--- a/.gitignore
+++ b/.gitignore
@@ -423,4 +423,5 @@ FodyWeavers.xsd
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,visualstudiocode,jupyternotebooks
 
-tmp
+tmp/
+*.ipynb
