--- a/.gitignore
+++ b/.gitignore
@@ -427,3 +427,17 @@ tmp/
 *.ipynb
 workspace.code-workspace
 .vscode/
+
+# Distribution / packaging
+bin/
+build/
+develop-eggs/
+dist/
+eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.instal
