--- a/examples/validation/bert_validate.yaml
+++ b/examples/validation/bert_validate.yaml
@@ -1,9 +1,7 @@
 data:
   class_path: bertserini_on_telegram.data.datamodules.SQuADDataModule
   init_args:
-    dataset_path: squad_v2
-    model_path: &bert_name rsvp-ai/bertserini-bert-base-squad
-    # model_path: &bert_name deepset/bert-base-cased-squad2
+    model_name: &bert_name rsvp-ai/bertserini-bert-base-squad
     train_batch_size: 32
     val_batch_size: 1
     doc_stride: 128
@@ -15,16 +13,13 @@ data:
 model:
   class_path: bertserini_on_telegram.models.modules.BERTModule
   init_args:
-    pretrained_model_name: *bert_name
-    context_size: 20
+    model_name: *bert_name
+    results_file: ./tmp/results_.json
     mu: 0.5
     n_best: 10
-    score_diffs_file: ./tmp/null_odds_.json
-    all_predictions_file: ./tmp/predictions_.json
-    results_file: ./tmp/results_.json
 
 trainer:
-  default_root_dir: /home/nicola/bertserini/logs/question_answering
+  default_root_dir: ./logs
   max_epochs: &epochs 100
   gpus: 1
   strategy: dp
