--- a/examples/command_line/command_line_config.yaml
+++ b/examples/command_line/command_line_config.yaml
@@ -1,8 +1,9 @@
 model:
   class_path: bertserini_on_telegram.models.modules.BERTModule
   init_args:
-    model_name: bert-large-uncased-whole-word-masking-finetuned-squad
-    results_file: /home/nicola/bertserini/results_.json
+    # model_name: bert-large-uncased-whole-word-masking-finetuned-squad
+    model_name: deepset/bert-base-cased-squad2
+    results_file: ../validation/tmp/results_.json
     mu: 0.4
     n_best: 30
 
