--- a/examples/validation/bert_validate.yaml
+++ b/examples/validation/bert_validate.yaml
@@ -1,7 +1,9 @@
 data:
   class_path: bertserini_on_telegram.data.datamodules.SQuADDataModule
   init_args:
-    model_name: &bert_name rsvp-ai/bertserini-bert-base-squad
+    # model_name: &bert_name rsvp-ai/bertserini-bert-base-squad
+    model_name: &bert_name deepset/bert-base-cased-squad2
+
     train_batch_size: 32
     val_batch_size: 1
     doc_stride: 128
