--- a/examples/command_line/command_line_config.yaml
+++ b/examples/command_line/command_line_config.yaml
@@ -1,11 +1,10 @@
 model:
   class_path: bertserini_on_telegram.models.modules.BERTModule
   init_args:
-    # model_name: bert-large-uncased-whole-word-masking-finetuned-squad
-    model_name: deepset/bert-base-cased-squad2
+    model_name: &bert_name rsvp-ai/bertserini-bert-base-squad
     results_file: ../validation/tmp/results_.json
-    mu: 0.4
-    n_best: 30
+    mu: 0.6
+    n_best: 10
 
 trainer:
   default_root_dir: ./logs
